test/invalid-semantics/57551_record_projection_missing_field/record_projection_missing_field.mag
-- Author: 57551, Eduardo Proença

-- Record projection requires the field to exist in the record type

fun main (_) : Unit -> Unit =
    var r : {x: Int} = {x = 10};
    print(r.y)